--- a/slides/template/index.html
+++ b/slides/template/index.html
@@ -18,7 +18,7 @@
 			<div class="slides">
 				<section>
 					<h2>Template</h2>
-					<small>2020 資訊之芽 🌱 C 語法班 by 實習講師 Jason</small>
+					<small>2020 資訊之芽 🌱 C 語法班 by Jason</small>
 				</section>
 				<section>
 					<section>
